--- a/00-library-app/public/stylesheets/style.css
+++ b/00-library-app/public/stylesheets/style.css
@@ -22,3 +22,12 @@ a {
   color: black;
 }
 
+.return-button {
+  margin-right: 20px;
+  color: #fff;
+  text-decoration: none;
+  padding: 8px 25px;
+  background-color: rgba(37, 37, 197, 0.63);
+  border-radius: 4px;
+  font-size: 18px;
+}
